<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Life In UK Test Practice</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="menu_settings">Settings</string>
    <string name="title_activity_info">Life In UK Flash Card</string>
    <string name="start_app">Start App</string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_check">Check</string>
    <string name="level1">Practice all question</string>
    <string name="level2">Take a test</string>
    <string name="level3">Test Result</string>
    <string name="level4">All in-correct test answer</string>
    <string name="appInfoText">Life In UK Flash Card v1.2 \n Based on 3rd Edition \n Tap on the Back button to return.</string>
    <string name="aboutUs">About Us</string>
    <string name="aboutUsAppText">Features : Life in UK test sample question that may be asked in official handbook of version 3rd edition.</string>
    <string name="aboutUsText">About the App \n We compiled over 1000+ questions that may be asked in the Life in UK objective test.</string>
    <string name="back">Back</string>
    
    <string name="adunitid1">ca-app-pub-4300070308662571/8685889843</string>
    <string name="adunitid2">ca-app-pub-4300070308662571/8685889843</string>
    <string name="adunitid3">ca-app-pub-4300070308662571/8685889843</string>
</resources>
